--- a/index.css
+++ b/index.css
@@ -26,6 +26,14 @@ h1, h2 {
   font-family: "Times New Roman", Times, serif;
 }
 
+h2 {
+  font-size: 1.4rem;
+}
+
+section {
+  margin-bottom: 2rem;
+}
+
 body {
   width: 100%;
   max-width: 600px;
